# tcp-server-client

./: CMakeLists.txt  README.MD
src/: main.cpp  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/platform/common/: socket_util.h
src/platform/linux/: socket_util.cpp
src/platform/windows/: socket_util.cpp
tcp-server-client/: CMakeLists.txt  tcp-server-client.cpp  tcp-server-client.h
